Version 1.5.5
* All examples: Added support for new, generalised CODIF and VDIF naming scheme
* Changed Mbps to a float, dealt with this by casting to int in legacy formats
* m5d, mark5streamunpacker: harmonise the way CODIF and VDIF files are treated
* format_codif, format_vdif: Fix calculation of frame granularity for CODIF (and VDIF, although that would never have been wrong)
* Post DiFX-2.6

Version 1.5.4
* Post DiFX-2.5
* Expose function determinelastmark5bframeoffset()
* m5d, m5spec: --version option
* m5d: fix use of offset for short reads (assumes file starts on a frame header)
* Version for DiFX-2.6, Mar 4, 2019

Version 1.5.3
* Integer rounding error in m5slice
* Add ctypes-based Python bindings 
* Add Python examples (m5spec.py, m5stat.py, m5subband.py, m5time.py, m5tone.py, m5selfcorr.py)
* m5subband: extract a single subband by FFT-based filtering of a wideband input file
* m5pcal: now supports tones at non-integer MHz, better supports wideband recordings, 
  adds FFT length (--chunksize) option, and is updated to behave more DiFX-like
* m5d: adds complex decode (--double) and custom printout format (e.g., --format=%f)
* test5b: will now report skipped frames
* zerocorr: write results with %e to avoid scaling causing underflow results
* more const correctness
* functions added that mask bad values in channel-dependent manner from decoded VDIF streams if EDV4 is used.  Per-channel accounting of zero values is provided.
* Fix some data rate and frame rate calculations in mark5bfile.h
* New function: void snprintmark5bfilesummary(char *str, int maxLength, const struct mark5b_file_summary *sum)
* Change RPM name to vlbi-mark5access.*.rpm
* New option in test5b: can supply frames per second and then the true number of skipped frames can be evaluated.
* fixmark5b: don't seg fault if can't open files
* Many utilities: change from use of signal() to sigaction(), which is supposed to be more reliable.
* Version for DiFX-2.5, May 16, 2017

Version 1.5.2